@@ -1,9 +1,9 @@
-# $NetBSD: Makefile,v 1.1.1.1 2005/07/20 13:08:15 rillig Exp $
+# $NetBSD: Makefile,v 1.2 2005/08/25 07:09:49 rillig Exp $
 #
 
-DISTNAME=		Yap-4.4.4
+DISTNAME=		Yap-5.0.0
 CATEGORIES=		lang
-MASTER_SITES=		http://www.ncc.up.pt/~vsc/Yap/
+MASTER_SITES=		http://www.ncc.up.pt/~vsc/Yap/Yap-5.0/
 
 MAINTAINER=		rillig@NetBSD.org
 HOMEPAGE=		http://www.ncc.up.pt/~vsc/Yap/
